PR install/54745: fix confusion about absolut and NetBSD-partition relative offsets.